# RiskGrabber

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
RiskGrabber/: Dockerfile  __init__.py  main.py
RiskGrabber/backend/: api.py  config.py  database.py  dataset_loader.py  models.py  schemas.py  scraper.py  time_utils.py
RiskGrabber/frontend/: index.html
RiskGrabber/llm/: embeddings.py  pipeline.py  prompts.py  risk_detection.py  sentiment.py  utils.py  vector_store.py
RiskGrabber/proxies/: README.txt
